--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:shared-lib": "./rebuild-shared",
     "postinstall": "./build-shared.sh",
-    "format": "prettier --write src/**/*.js"
+    "format": "prettier --write src/**/*.js example/**/*.js"
   },
   "keywords": [],
   "author": "",
