--- a/.npmignore
+++ b/.npmignore
@@ -1,2 +1,14 @@
 docs
 example
+c/*
+!c/quickwebserver.c
+!c/quickwebserver.h
+quickwebserver.so
+quickwebserver.o
+quickwebserver.o.d
+node_modules
+.idea
+.DS_Store
+package-lock.json
+webserver_test.js
+src/deps/regexparam.js
