--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "quickwebserver",
-  "version": "0.0.1",
+  "name": "@lyohaplotinka/quickwebserver",
+  "version": "0.0.1-1",
   "description": "Implementation of HTTP web server in the QuickJS Runtime",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
