--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lyohaplotinka/quickwebserver",
-  "version": "0.0.2-2",
+  "version": "0.0.3",
   "description": "Implementation of HTTP web server in the QuickJS Runtime",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
